# nssa-framework

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: multi-seed-pda.md
lez-cli/: Cargo.toml
lez-cli/src/: cli.rs  hex.rs  init.rs  inspect.rs  lib.rs  parse.rs  pda.rs  serialize.rs  tx.rs
lez-client-gen/src/: ffi_codegen.rs  tests.rs
lez-framework/: Cargo.toml
lez-framework-core/: Cargo.toml
lez-framework-core/src/: error.rs  idl.rs  lib.rs  types.rs  validation.rs
lez-framework-core/tests/: custom_instruction.rs  signer_validation.rs  variable_accounts.rs
lez-framework-macros/: Cargo.toml
lez-framework-macros/src/: lib.rs
lez-framework/src/: lib.rs
lez-framework/tests/: e2e.rs
nssa-framework/: Cargo.toml
nssa-framework-cli/: Cargo.toml
nssa-framework-cli/src/: cli.rs  init.rs  inspect.rs  lib.rs  parse.rs  pda.rs  serialize.rs  tx.rs
nssa-framework-core/: Cargo.toml
nssa-framework-core/src/: error.rs  idl.rs  lib.rs  types.rs  validation.rs
nssa-framework-core/tests/: custom_instruction.rs  signer_validation.rs  variable_accounts.rs
nssa-framework-macros/: Cargo.toml
nssa-framework-macros/src/: lib.rs
nssa-framework/src/: lib.rs
scripts/: smoke-test.sh
tests/e2e/fixture_program/: Cargo.toml
tests/e2e/fixture_program/src/: lib.rs  main.rs
