[package]
name = "lez-framework-core"
version = "0.1.0"
edition = "2021"
description = "Core types for the LEZ program framework"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "dee3f7fa6f2bf63abef00828f246ddacade9cdaf", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
