[package]
name = "nssa-framework-cli"
version = "0.1.0"
edition = "2021"
description = "Generic IDL-driven CLI for NSSA/LEZ programs"

[[bin]]
name = "nssa-cli"
path = "src/bin/main.rs"

[dependencies]
nssa-framework-core = { path = "../nssa-framework-core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
risc0-zkvm = { version = "3.0.3", features = ["std"] }
base58 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
