[package]
name = "nssa-framework-core"
version = "0.1.0"
edition = "2021"
description = "Core types for the NSSA/LEZ program framework"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
