[package]
name = "nssa-framework"
version = "0.1.0"
edition = "2021"
description = "Developer framework for building NSSA/LEZ programs (like Anchor for Solana)"

[dependencies]
nssa-framework-core = { path = "../nssa-framework-core" }
nssa-framework-macros = { path = "../nssa-framework-macros" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "schouhy/full-bedrock-integration", features = ["host"] }
borsh = { version = "1.0", features = ["derive"] }
