[workspace]

[package]
name = "fixture-program"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
lez-framework = { path = "../../../lez-framework" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main", features = ["host"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
